fix: fix overflow on heating schedule overlay (Sunday) (HTLK-43)

--- a/frontend/src/app/components/heating-schedule/heating-schedule.component.scss
+++ b/frontend/src/app/components/heating-schedule/heating-schedule.component.scss
@@ -204,8 +204,16 @@
   row-gap: 0.5rem;
 }
 
-.device-schedule-mode-selector.mirror {
+.device-schedule-mode-selector.mirror:not(.mirrorX) {
   transform: translateY(-100%);
+}
+
+.device-schedule-mode-selector.mirrorX:not(.mirror) {
+  transform: translateX(-150%);
+}
+
+.device-schedule-mode-selector.mirrorX.mirror {
+  transform: translateY(-100%) translateX(-140%);
 }
 
 .device-schedule-mode-selector-title {
@@ -317,7 +325,7 @@
   background-color: #232323;
   top: 50%;
   left: 100%;
-  width: 12rem;
+  width: 15rem;
   z-index: 1;
   margin-left: 0.25rem;
   border-radius: 0.25rem;
